# HomeAssistant

./: .env.example  README.md  main.py  pyproject.toml
apps/cli/: main.py
apps/device_service/: main.py
apps/tools/: audio_probe.py  camera_probe.py  db_inspect.py  face_enroll.py
config/base/: app.yaml  audio.yaml  cameras.yaml  database.yaml  vision.yaml
config/dev/: README.md
config/prod/: README.md
deploy/: README.md
docs/api/: README.md
docs/architecture/: README.md  cameras.md
docs/decisions/: README.md
docs/hardware/: README.md
src/: __init__.py
src/assistant/: __init__.py
src/core/logging/: __init__.py
src/home_assistant_device/core/: __init__.py
src/home_assistant_device/perception/: __init__.py
src/home_assistant_device/speech/: __init__.py
src/perception/detection/: __init__.py
src/perception/recognition/: __init__.py
src/perception/video_capture/: __init__.py
src/persistence/: __init__.py
src/persistence/file_store/: __init__.py
src/persistence/firestore_sync/: __init__.py
src/platform/: __init__.py
src/platform/camera/: __init__.py  base.py  config_loader.py  factory.py  imx477_camera.py  imx708_camera.py  opencv_camera.py  pipeline_builder.py  types.py
src/platform/jetson/: __init__.py
src/platform/storage/: __init__.py
src/services/assistant_service/: __init__.py
src/services/audio_service/: __init__.py
src/services/recognition_service/: __init__.py
src/speech/input/: __init__.py
tests/: README.md
tests/hardware/: conftest.py  test_imx477_capture.py  test_imx708_capture.py
(+17 files in other folders)
