[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "home-assistant-device"
version = "0.1.0"
description = "Jetson Orin Nano home assistant with dual-camera perception, speech, and local-first memory."
requires-python = ">=3.11"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
